# serverless-sveltekit-python-ts-monorepo

./: .gitignore  .npmrc  package.json  pnpm-lock.yaml  pyproject.toml  workspace.toml
apps/cloud/: package.json  sst.config.ts
apps/cloud/stacks/: MyStack.ts
apps/functions/: package.json  sst-env.d.ts
apps/functions/src/: processor.ts
apps/web/: package.json  tailwind.config.cjs
apps/web/src/: app.html  prosemirror.css
apps/web/src/routes/: +page.svelte  Cell.svelte  ProseMirrorEditor.svelte  TiptapEditor.svelte
apps/web/src/routes/cell/: +page.svelte
bases/mono/apigw/: __init__.py  main.py
projects/apigw/: Dockerfile  README.md  lambda-entrypoint.sh  pyproject.toml
test/bases/voidstar/apigw/: test_core.py
