[tool.poetry]
name = "apigw"
version = "0.0.1"
description = ""
authors = ['ndilsou <nasoungadoy@gmail.com>']
license = ""

packages = [
    { include = "mono/apigw", from = "../../bases"},
]

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.26.74"
aws-lambda-powertools = {extras = ["parser", "tracer"], version = "^2.8.0"}
pyhumps = "^3.8.0"
requests = "^2.28.2"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
